<resources>
    <string name="app_name">FYP</string>

    <string name="title_activity_fullscreen_home">FullscreenHomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_display_arcamera">AR</string>
    <string name="title_activity_maps">Floor Plan</string>
    <string name="tab_text_1_maps">Ground&#10;Floor</string>
    <string name="tab_text_2_maps">1st&#10;Floor</string>
    <string name="tab_text_3_maps">2nd&#10;Floor</string>
    <string name="tab_text_11">Ground</string>
    <string name="tab_text_21">1st</string>
    <string name="tab_text_31">2nd</string>
    <string name="swipeLeft_right"> &lt;-Swipe left and right to change floor -&gt;</string>

    <string name="tab_text_home">Home</string>
    <string name="tab_text_about">About</string>
    <string name="tab_text_events">Events</string>
    <string name="title_activity_more_info_bowl">North Devon Chafing Fish</string>
    <string name="large_text">
        "North Devon in south-west England was renowned as a centre for pottery"
        " production and fragments are often found in excavations in throughout Ireland. Imports from"
        "the American colonies were roued through English pors, before being sent to Ireland, giving"
        "merchants in the north Devon ports the opportunity to add their pottery onto the ships"
        "bound for Galway.\n\n""Separate cargoes of just pottery were also sent to Galway, John Davie, a merchant from"
        "Bideford in North Devon, for example, shipped ‘one hundred dozen of earthenware’ in 1672."
        "The importation of pottery from North Devon to Ireland seems to have peaked at the end of"
        "the 17th century and dwindled during the following century."

    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_postbox_more_info">Penfold Pillar Box</string>
    <string name="postbox_2ndH">
        "Date: c.1872\n""Location: Corner of High street and Mainguard Street\n"
    </string>

    <string name="large_textP">
        "This cast-iron hexagonal Penfold Pillar Box originally stood on the corner of High St and Mainguard St, Galway. Before Irish Independence post boxes were painted red but one of the first acts of the new Irish Government was to order that green would be new color for Post Office boxes\n\n It was first placed there in the 1870s and remained in situ until c. 2004 when it was acquired on loan from An Post. Penfold Pillar Boxes, designed by John Wornham Penfold (1828-1909), architect and surveyor, were manufactured by ‘Cochrane and Co. Dudley’, in the West Midlands, between 1866 and 1879; this particular example was made c. 1872. \n\nThe earliest of these post boxes were painted a bronze-green colour but from about 1874 onwards they were painted red. These ‘imperial’ post boxes also incorporated Queen Victoria’s royal cipher (VR) and the Royal Coat of Arms; interestingly (and unusually), someone has removed the coat of arms from this Galway example. About 300 of these post boxes were manufactured and, apart from Britain and Ireland, surviving examples are to be found in such far-flung places as Australian, New Zealand and India (Davies and Murphy, 2008, 47)."
    </string>

    <string name="large_textP2">
"Irish Free State
Although this Galway postbox still bears the Royal Cipher of Queen Victoria, it has been re-painted “Saorstát Green” (Ferguson, 2009, 42). The Irish Free State was acutely aware of the symbolic value of the postal service, formerly such an important arm of the British Administration in Ireland. In Imagined Communities, Benedict Anderson wrote that ‘successful revolutionaries also inherit the wiring of the old state … like the complex electrical system in any large mansion when the owner has fled, the state awaits the new owner’s hand at the switch to be very much its old brilliant self again’ (2006, 164).

In 1922, the Postmaster General of the Irish Free State decreed that all postboxes were to be painted green. The change of governance was symbolised by the change of paint. Postage stamps were treated similarly. Stamps that had previously been issued by the British administration, bearing the head of King George V, were released carrying an overprinted statement, Rialtas Sealadach na hÉireann 1922 (Provisional Government of Ireland 1922). The overprints, first issued in 1922, were gradually phased out of usage and replaced by specially commissioned series of stamps bearing the name “Éire”.

Galway in 1922
Apart from the re-painting of postboxes, there were several noticeable changes in “Independent Galway”. In February 1922, Renmore Barracks, the regimental home of the Connaught Rangers in Galway, was handed over to the Irish Free State. In May, the statue of Lord Dunkellin, the Anglo-Irish MP for Galway City and County, which had graced Eyre Square since 1873, was pulled from its pedestal, dragged through the streets of Galway and dumped in the River Corrib.

Galway, however, didn’t engage in the wholesale “cleansing of Britishness” as was witnessed in some Irish towns. Its city-centre streets retained their colonial names; for example, Queen’s Street, Victoria Place, Eyre Square, Eyre Street, William’s Street, Williamsgate Street, and Eglinton Street. Moreover, the Crimean Cannon, gifted by the British War Department in 1857, were retained as ornamental features in the town’s principal square."

    </string>
    <string name="opening_hours">
        "Monday\nTuesday\nWednesday\nThursday\nFriday\nSaturday\nSunday"
    </string>
    <string name="hours">
        "Closed\n10a.m.–5p.m.\n10a.m.–5p.m.\n10a.m.–5p.m.\n10a.m.–5p.m.\n10a.m.–5p.m.\nClosed"

    </string>

    <string name="welcome_message">
        "Galway City Museum has three floors of exciting exhibitions engaging visitors in the archaeology, history and sea science of Galway. The attraction is one of Galway’s most popular cultural hotspots and welcomes over 200,000 visitors per year."
    </string>

    <string name="CurrentExhibitions">
        "-  Prehistoric Galway\n-  Medieval Galway\n-  Pádraic Ó Conaire\n-  Revolution\n-  The Galway Hooker\n-  Sea Science\n-  Keepers of the Gael"
    </string>

    <string name = "home0">
        "Welcome to the Galway City Museum app"
    </string>

    <string name = "home1">
        "App features:"
    </string>
    <string name="home2">
        "\nRetrieve extra content on artefacts from around the museum, including videos, audio clips and render 3D models in the real world\n\n\nFind where to go next in the museum by looking through the floor plan.\n\n\nFind out about up coming events in the museum.\n\n\nOnce you’re finished the tour of the museum, take a quiz to see how much you’ve taken in!
    </string>
    <string name="home3">
        "AR Mode:\n\n\n\n\n\nMaps:\n\n\n\nEvents:\n\n\n\nTrivia:"
    </string>



</resources>
