<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="80dp">

<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="About the Museum"
        android:textColor="#FFC107"
        android:textSize="30sp">

    </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:layout_below="@+id/welcome"
            android:id="@+id/welcome_par"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginTop="20dp">
        </TextView>

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Opening Hours:"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:translationZ="10dp"
            android:layout_below="@+id/welcome_par"
            android:layout_marginTop="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="18sp">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heading"
            android:layout_centerInParent="true"
            android:id="@+id/first_rel"
            android:layout_marginBottom="80dp">

        <TextView
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingEnd="30dp"
            android:paddingStart="50dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/opening_hours"
            android:textColor="#FFFFFF"
            android:textSize="16sp">

        </TextView>

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/days"
            android:paddingBottom="10dp"
            android:text="@string/hours"
            android:textColor="#FFFFFF"
            android:paddingStart="30dp"
            android:paddingEnd="50dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:layout_marginBottom="120dp">

        </TextView>

        </RelativeLayout>

</RelativeLayout>
</ScrollView>
